# gtfs_manager

./: .gitignore  Cargo.toml  LICENSE.md  README.md  project_notes.md
notes/: project_notes.md  sp_dataset_notes.md  understanding_gtfs_notes.md
src/: app_delegate.rs  data.rs  dropdown.rs  dropdown_select.rs  lib.rs  list_select.rs  main.rs  map.rs  views.rs
src/data/: newtypes.rs
src/views/: constants.rs  dropdown.rs  expander.rs  filtered_list.rs  mod.rs
