[package]
name = "gtfs_manager"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "3.1.12", features = ["derive"] }
uuid = { version = "1.1.2", features = ["v4"] }
druid = { git = "https://github.com/linebender/druid", features = ["im", "image", "png"] }
# gtfs-structures = { version = "0.32.2" }
# gtfs-structures = { path = "../gtfs-structure", default-features = false }
gtfs-structures = { path = "../gtfs-structure" }
# gtfs-structures = { git = "https://github.com/maxwell8888/gtfs-structure" }
chrono = "0.2.16"