[package]
name = "gtfs_manager"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "3.1", features = ["derive"] }
uuid = { version = "1.1", features = ["v4"] }
im = { version = "15.0", features = ["serde"] }
druid = { git = "https://github.com/linebender/druid", features = ["im", "image", "png"] }
# gtfs-structures = { version = "0.32.2" }
# gtfs-structures = { path = "../gtfs-structure", default-features = false }
gtfs-structures = { path = "../gtfs-structure" }
# gtfs-structures = { git = "https://github.com/maxwell8888/gtfs-structure" }
# chrono = "0.2.16"
serde = { version = "1.0", features = ["derive", "rc"] }
chrono = { version = "0.4", features = ["serde"] }
bincode = "1.3"
rgb = { version = "0.8", features = ["serde"] }